@@ -6,7 +6,7 @@
 	<META NAME="GENERATOR" CONTENT="StarOffice 7  (Solaris Sparc)">
 	<META NAME="CREATED" CONTENT="20020718;11000900">
 	<META NAME="CHANGEDBY" CONTENT="Robert Friesenhahn">
-	<META NAME="CHANGED" CONTENT="20040807;13522900">
+	<META NAME="CHANGED" CONTENT="20041114;10505600">
 	<META NAME="DESCRIPTION" CONTENT="GraphicsMagick is a robust collection of tools and libraries to read, write, and manipulate an image in any of the more popular image formats including GIF, JPEG, PNG, PDF, and Photo CD.  With GraphicsMagick you can create GIFs dynamically making it suitable for Web applications.  You can also resize, rotate, sharpen, color reduce, or add special effects to an image and save your completed work in the same or differing image format.">
 	<META NAME="KEYWORDS" CONTENT="GraphicsMagick, Image Magick, Image Magic, PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic, WebMagick, Web Magic, visualization, image processing, software development, simulation, image, software, AniMagick, Animagic,  Magick++">
 	<STYLE>
@@ -40,8 +40,8 @@
 			</P>
 		</TD>
 		<TD WIDTH=71%>
-			<P ALIGN=LEFT><SPAN STYLE="background: transparent"><I><A HREF="http://sourceforge.net/project/showfiles.php?group_id=73485" TARGET="_top">1.1.3</A>
-			(Released August 7, 2004)</I></SPAN></P>
+			<P ALIGN=LEFT><SPAN STYLE="background: transparent"><I><A HREF="http://sourceforge.net/project/showfiles.php?group_id=73485" TARGET="_top">1.1.4</A>
+			(Released November 13, 2004)</I></SPAN></P>
 		</TD>
 	</TR>
 	<TR VALIGN=TOP>
@@ -64,10 +64,9 @@ building dynamic Web applications. <I>GraphicsMagick</I> may be used
 to resize, rotate, sharpen, color reduce, or add special effects to
 an image and save the result in the same or differing image format.
 Image processing operations are available from the command line, as
-well as through C, C++, Perl, Java, or Windows COM programming
-interfaces. Extensions are available from third-parties to support
-<A HREF="programming.html">programming</A> in Borland's Delphi, Java,
-PHP, Python, Scheme, Tcl, and Ruby.</P>
+well as through C, C++, Perl, or Windows COM programming interfaces.
+Extensions are available from third-parties to support <A HREF="programming.html">programming</A>
+in Borland's Delphi, Java, PHP, Python, Scheme, Tcl, and Ruby.</P>
 <P><I><SPAN STYLE="background: transparent">Gr</SPAN>aphicsMagick</I>
 is <A HREF="Copyright.html">copyrighted</A> by the GraphicsMagick
 Group as well as many others. <I>GraphicsMagick</I> is dististributed
@@ -183,7 +182,7 @@ CPUs. <I>GraphicsMagick</I> is available for virtually any Unix or
 Unix-like system, including Linux. It also runs under <A HREF="windows.html">Windows</A>
 '98 and later ('98, ME, NT 4.0, 2000, and XP), and MacOS-X. Ports
 exists for MacOS 9 and VMS but the ports lack a maintainer and have
-not been tested for quite a while (please volunteer!).</P>
+not been tested for several years (please volunteer!).</P>
 <TABLE WIDTH=100% BORDER=0 CELLPADDING=2 CELLSPACING=2>
 	<TR>
 		<TD BGCOLOR="#52799e">
