@@ -6,7 +6,7 @@
 	<META NAME="GENERATOR" CONTENT="StarOffice 7  (Solaris Sparc)">
 	<META NAME="CREATED" CONTENT="20020823;18090800">
 	<META NAME="CHANGEDBY" CONTENT="Robert Friesenhahn">
-	<META NAME="CHANGED" CONTENT="20040418;19075700">
+	<META NAME="CHANGED" CONTENT="20041114;11393700">
 	<META NAME="CLASSIFICATION" CONTENT="Description of the GraphicsMagick development and release processes.">
 	<META NAME="DESCRIPTION" CONTENT="GraphicsMagick is a robust collection of tools and libraries to read, write, and manipulate an image in any of the more popular image formats including GIF, JPEG, PNG, PDF, and Photo CD.  With GraphicsMagick you can create GIFs dynamically making it suitable for Web applications.  You can also resize, rotate,  sharpen, color reduce, or add special effects to an image and save your completed work in the same or differing image format.">
 	<META NAME="KEYWORDS" CONTENT="GraphicsMagick, Image Magick, Image Magic, PerlMagick, Perl Magick, Perl Magic, CineMagick, PixelMagick, Pixel Magic,    WebMagick, Web Magic, visualization, image processing, software     development, simulation, image, software, AniMagick, Animagic,    Magick++">
@@ -125,17 +125,29 @@ testing is vital to ensure the correct operation of the package.
 GraphicsMagick is compiled, and its entire test suite is executed, in
 the following environments:</FONT></FONT></P>
 <P STYLE="margin-left: 0.79in"><FONT FACE="Verdana, Arial, Helvetica, sans-seri"><FONT SIZE=3>Solaris
-9 (SPARC platform, GCC 3.3, compiled with 32 bits)</FONT></FONT></P>
+9 (SPARC platform, GCC 3.4, compiled with 32 bits)</FONT></FONT></P>
 <P STYLE="margin-left: 0.79in"><FONT FACE="Verdana, Arial, Helvetica, sans-seri"><FONT SIZE=3>Solaris
 9 (SPARC platform, Forte 7, compiled with 32 bits)</FONT></FONT></P>
 <P STYLE="margin-left: 0.79in"><FONT FACE="Verdana, Arial, Helvetica, sans-seri"><FONT SIZE=3>FreeBSD
-5.0 (x686 platform, GCC 3.3)</FONT></FONT></P>
+5.0 (x686 platform, GCC 3.4)</FONT></FONT></P>
+<P STYLE="margin-left: 0.79in"><FONT FACE="Verdana, Arial, Helvetica, sans-seri"><FONT SIZE=3>AIX
+4.3.2 IBM C compiler (xlc), C code only.</FONT></FONT></P>
 <P STYLE="margin-left: 0.79in"><FONT FACE="Verdana, Arial, Helvetica, sans-seri"><FONT SIZE=3>AIX
 5.1 (IBM xlc vendor compiler)</FONT></FONT></P>
 <P STYLE="margin-left: 0.79in"><FONT FACE="Verdana, Arial, Helvetica, sans-seri"><FONT SIZE=3>HP-UX
+10.20 HP C compiler (cc), C code only.</FONT></FONT></P>
+<P STYLE="margin-left: 0.79in"><FONT FACE="Verdana, Arial, Helvetica, sans-seri"><FONT SIZE=3>HP-UX
 11.00 (HP C/C++ vendor compiler)</FONT></FONT></P>
+<P STYLE="margin-left: 0.79in"><FONT FACE="Verdana, Arial, Helvetica, sans-seri"><FONT SIZE=3>HP-UX
+11.11 (HP C/C++ vendor compiler)</FONT></FONT></P>
 <P STYLE="margin-left: 0.79in"><FONT FACE="Verdana, Arial, Helvetica, sans-seri"><FONT SIZE=3>IRIX
 6.5 (MIPSpro 7.4 vendor compiler)</FONT></FONT></P>
+<P STYLE="margin-left: 0.79in"><FONT FACE="Verdana, Arial, Helvetica, sans-seri"><FONT SIZE=3>Digital
+Unix 4.0D (vendor compiler)</FONT></FONT></P>
+<P STYLE="margin-left: 0.79in"><FONT FACE="Verdana, Arial, Helvetica, sans-seri"><FONT SIZE=3>Digital
+Unix 5.1 (vendor compiler)</FONT></FONT></P>
+<P STYLE="margin-left: 0.79in"><FONT FACE="Verdana, Arial, Helvetica, sans-seri"><FONT SIZE=3>Gentoo
+Linux 6.3.</FONT></FONT></P>
 <P STYLE="margin-left: 0.79in"><FONT FACE="Verdana, Arial, Helvetica, sans-seri"><FONT SIZE=3>Windows
 XP (built with Visual Studio .net)</FONT></FONT></P>
 <P STYLE="margin-left: 0.79in"><FONT FACE="Verdana, Arial, Helvetica, sans-seri"><FONT SIZE=3>Windows
